--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <meta name="description" content="BELGA MOBILITY SRL, Rue Eugène Toussaint 47 1083 Ganshoren (BE). Phone: +32485209191 - Email: booking@belgamibility.be">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=<%= VUE_APP_GOOGLE %>"></script>
